Fix little layout bug

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -30,6 +30,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  position: relative;
+  z-index: 1;
 }
 
 .l-sidebar {
